<resources>
    <string name="app_name">Kalendarr</string>
    <string name="add">ADD</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="db_drop">DROP TABLE IF EXISTS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_question">Do you really want to delete this event?</string>
    <string name="cancel">Cancel</string>
    <string name="for_date">For date:</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Event</string>
</resources>
